src/snapshots/libflatterer__tests__basic.jl-nolink-pushdown-fields.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,field_name,field_type,field_title,count"
- "main,id,number,id,2"
- "main,title,text,title,2"
- "main,releaseDate,date,releaseDate,2"
- "main,rating_code,text,rating_code,2"
- "main,rating_name,text,rating_name,2"
- "developer,name,text,name,2"
- "developer,main_id,number,main_id,2"
- "platforms,name,text,name,3"
- "platforms,main_id,number,main_id,3"

