src/snapshots/libflatterer__tests__basic.json-all_strings-fields.csv.snap
---
source: src/lib.rs
expression: output
snapshot_kind: text
---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,2"
- "main,id,text,id,2"
- "main,title,text,title,2"
- "main,releaseDate,text,releaseDate,2"
- "main,rating_code,text,rating_code,2"
- "main,rating_name,text,rating_name,2"
- "developer,_link,text,_link,2"
- "developer,_link_main,text,_link_main,2"
- "developer,name,text,name,2"
- "platforms,_link,text,_link,3"
- "platforms,_link_main,text,_link_main,3"
- "platforms,name,text,name,3"
