src/snapshots/libflatterer__tests__basic.json-extrafile-fields.csv.snap
---
source: src/lib.rs
expression: output
---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,4"
- "main,id,number,id,4"
- "main,title,text,title,4"
- "main,releaseDate,date,releaseDate,4"
- "main,rating_code,text,rating_code,4"
- "main,rating_name,text,rating_name,4"
- "developer,_link,text,_link,4"
- "developer,_link_main,text,_link_main,4"
- "developer,name,text,name,4"
- "platforms,_link,text,_link,6"
- "platforms,_link_main,text,_link_main,6"
- "platforms,name,text,name,6"

